# or-proof

./: .gitignore  CMakeLists.txt  run.sh
cmake-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-build/lib/: Makefile  cmake_install.cmake  main
cmake-build/src/: Makefile  cmake_install.cmake
cmake-build/src/utils/: Makefile  cmake_install.cmake
cmake-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  runAllTest  runAppTest  runPaillierTest  runProverTest  runTest  runVerifierTest
data/: benchmark_or_proof_ni.csv  new_or_proof_ni_time.csv  new_or_proof_time.csv  or_proof_time_1.csv  or_proof_time_2.csv  or_proof_time_3.csv  root_proof_time_3.csv
src/: CMakeLists.txt  PaillierEncryption.cpp  PaillierEncryption.h  Prover.cpp  Prover.h  Verifier.cpp  Verifier.h  namespace.h
src/utils/: CMakeLists.txt  ConvertUtils.cpp  ConvertUtils.h  Timer.cpp  Timer.h
test/: CMakeLists.txt  Paillier_test.cpp  Prover_test.cpp  Verifier_test.cpp  app_test.cpp  test.cpp
